k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sveltekit-app
spec:
  selector:
    app: sveltekit-app
  ports:
  # Default port used by the image
  - port: 3000
