k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sveltekit-app
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: sveltekit-app
          servicePort: 3000
